jump into Rime-Squirrel as bxm4zq2mac

--- a/Rime-Squirrel/bxm4zq2mac.dict.yaml
+++ b/Rime-Squirrel/bxm4zq2mac.dict.yaml
@@ -1,3 +1,12 @@
+# Rime dictionary
+# encoding: utf-8
+
+---
+name: bxm4zq2mac
+version: "13.3.26"
+sort: original
+...
+
 又	a
 如	a
 她	a
@@ -37086,6 +37095,7 @@
 喍	oylm
 嗴	oylu
 嘴巴	oylz
+吐槽	oyms
 啨	oyn
 啃	oyn
 噎	oynk
@@ -48084,8 +48094,10 @@
 偳	vetg
 人山人海	vevd
 催促	veve
-催化剂	vevi
+微件	vevf
+微信	vevi
 催	vevi
+催化剂	vevi
 侵入	vevj
 侵佔	vevl
 催化	vevl
@@ -49038,9 +49050,9 @@
 全天候	vihv
 全无	vihw
 進一步	vihy
+个	vii
 俚	vii
 徰	vii
-个	vii
 進攻	viia
 知识就是力量	viib
 依旧	viib
@@ -49556,7 +49568,7 @@
 人事科	vjfu
 人托人	vjfv
 人选	vjfw
-任选ƙ	vjfw
+任选	vjfw
 入选	vjfw
 价廉物美	vjfy
 傉	vjgd
@@ -53511,6 +53523,7 @@
 緎	wsoh
 绕圈子	wsqz
 綫	wss
+线下	wsth
 线程	wsuo
 引进人才	wsvx
 缥缈	wswb
@@ -53520,6 +53533,7 @@
 綫索	wsxn
 线索	wsxn
 緸	wsy
+线上	wsyi
 彉	wsyg
 紼	wsz
 绋	wsz
