整理说明文件...+教程

--- a/Rime-Squirrel/bxm4zq2mac.dict.yaml
+++ b/Rime-Squirrel/bxm4zq2mac.dict.yaml
@@ -9892,6 +9892,8 @@ sort: original
 提高单位面积产量	figb
 揥	fige
 中小学	figg
+中州	figg
+中州韻	figg
 搒	figh
 較小	figi
 較少	figj
@@ -38974,6 +38976,7 @@ sort: original
 猀	qdgj
 圆满解决	qdhd
 罗列	qdhd
+狼毫	qdio
 国外市场	qdiy
 罗	qdj
 置之度外	qdjd
@@ -40645,6 +40648,7 @@ sort: original
 熤	reek
 灿	rei
 燖	reid
+中州韻	reim
 煤炭工业	reix
 泰山压顶	rejt
 奔走相告	remf
@@ -43327,6 +43331,7 @@ sort: original
 骃	sqr
 駰	sqr
 騦	squ
+鼠鬚管	squi
 我國人民	sqvp
 我国人民	sqvp
 醞	sqvq
@@ -46406,8 +46411,11 @@ sort: original
 毇	ugma
 鱗	ugmf
 鳞	ugmf
+鼠标	ugmg
+鼠鬚管	ugfk
+鼠须管	uggk
 鮹	ugn
-稍	ugn
+稍等	ugn
 翻案	ugna
 税额	ugna
 鱨	ugnb
@@ -52317,6 +52325,7 @@ sort: original
 冘	wdz
 见义勇为	wdzd
 弢	wea
+小狼毫	weas
 绿油油	wedd
 緑洲	wedg
 绿洲	wedg
