--- a/Rime-Squirrel/default.custom.yaml
+++ b/Rime-Squirrel/default.custom.yaml
@@ -2,5 +2,12 @@
 # encoding: utf-8
 
 patch:
-  "menu/page_size": 9   # 候选项数
+  "menu/page_size": 7   # 候选项数
+  schema_list:  # 對於列表類型，現在無有辦法指定如何添加、消除或單一修改某項，於是要在定製檔中將整個列表替換！
+    - schema: bxm4zq2mac  # 這樣就啓用了未曾有過的高級輸入方案！其實這麼好的方案應該排在最前面哈。
+    - schema: luna_pinyin_simp
+  "switcher/hotkeys":  # 這個列表裏每項定義一個快捷鍵，使哪個都中
+    - "Alt+grave"      
+    - "Control+grave"  # 你看寫法並不是 Ctrl+` 而是與 IBus 一致的表示法
+    - F4
 
