--- a/Rime-Squirrel/bxm4zq2mac.dict.yaml
+++ b/Rime-Squirrel/bxm4zq2mac.dict.yaml
@@ -22527,6 +22527,7 @@ sort: original
 重大問題	irxb
 謝	irxd
 谢	irxd
+贡献者	irxj
 贡献	irxn
 正则表达式	irys
 訣	irz
@@ -58090,7 +58091,7 @@ sort: original
 鲝	yuj
 去處	yuja
 志愿书	yujf
-志願	yujj
+志愿者	yujj
 志愿	yujj
 去向	yujn
 志愿军	yujn
