collected loc fixed

--- a/Rime-Squirrel/bxm4zq2mac.dict.yaml
+++ b/Rime-Squirrel/bxm4zq2mac.dict.yaml
@@ -20876,6 +20876,7 @@ sort: original
 瓌	iiqk
 工商界人士	iiqy
 五讲四美	iiqy
+高端大气上档次	iird
 立功赎罪	iirq
 註射	iirx
 理财	iirx
@@ -25693,6 +25694,7 @@ sort: original
 老区	jlcx
 老汉	jlda
 老婆	jlda
+老湿	jldb
 自以为是	jldb
 老外	jldl
 老资格	jldm
@@ -38447,6 +38449,7 @@ sort: original
 民進	psvi
 民众	psvv
 民风	pswx
+研发	psxa
 展翅	psxa
 民間	psxb
 民办	psxg
@@ -39068,6 +39071,7 @@ sort: original
 独断专行	qgsv
 狮	qgt
 园丁	qgth
+累觉不爱	qgtj
 罤	qgtj
 圙	qgtq
 回归祖国	qgtq
@@ -39167,6 +39171,7 @@ sort: original
 還給	qhwv
 還有	qhxn
 国务卿	qiac
+男默女泪	qiad
 恩重如山	qiae
 狂欢	qiah
 国务院	qiap
@@ -42767,6 +42772,8 @@ sort: original
 开支	shxa
 开发区	shxc
 专业户	shxd
+开发者	shxj
+开发者关系管理	shxi
 开办	shxg
 专业	shxh
 开业	shxh
@@ -43483,6 +43490,7 @@ sort: original
 駘	suo
 骀	suo
 骖	surg
+我和我的小伙伴们都惊呆了	susw
 骏马	susz
 醦	suug
 驂	suug
@@ -43610,6 +43618,7 @@ sort: original
 農業部門	sxix
 駣	sxj
 農業生産資料	sxjg
+开发者关系管理	sxji
 農業生産	sxji
 駁斥	sxjt
 驳斥	sxjt
@@ -43840,6 +43849,7 @@ sort: original
 百分数	tbgg
 百分	tbgh
 百分率	tbgi
+不明觉厉	tbgj
 百分制	tbgj
 百分比	tbgl
 百分点	tbgl
@@ -47598,6 +47608,7 @@ sort: original
 侞	vao
 仅限	vapp
 俻	vaq
+人艰不拆	vatf
 知难而进	vats
 知难而上	vaty
 仅仅	vava
@@ -53431,6 +53442,7 @@ sort: original
 细致	wqhu
 細	wqi
 细	wqi
+细思恐极	wqim
 絼	wqj
 綥	wqk
 细长	wqkj
@@ -54614,6 +54626,7 @@ sort: original
 非常时期	xgbb
 十分明確	xgbp
 十分明确	xgbp
+十动然拒	xgdf
 十分激烈	xgdh
 十分滿意	xgdi
 十分注意	xgdi
