--- a/Rime-Squirrel/bxm4zq2mac.dict.yaml
+++ b/Rime-Squirrel/bxm4zq2mac.dict.yaml
@@ -1678,6 +1678,7 @@ sort: original
 顯著特點	bhfi
 显著特点	bhfl
 照搬	bhfn
+易拉宝	bhfn
 晚报	bhfp
 甘肅	bhfx
 甘肃	bhfx
@@ -2547,6 +2548,7 @@ sort: original
 題詞	btiz
 题词	btiz
 是也乎	btl
+(￣▽￣)	btl
 目不转睛	btlb
 旱情	btly
 眄	btlz
@@ -3734,6 +3736,7 @@ sort: original
 專題	cxbt
 区县	cxbu
 区区	cxcx
+蝴蝶架	cxcx
 專	cxd
 甎	cxda
 剸	cxdg
@@ -6540,6 +6543,7 @@ sort: original
 冷热病	dvfj
 涂抹	dvfm
 名优特新产品	dvfo
+海报	dvfp
 海拔	dvfx
 冷热	dvfx
 深入持久地开展下去	dvfy
@@ -7678,6 +7682,7 @@ sort: original
 蹃	ehxo
 超載	ehxs
 超载	ehxs
+跪求	ehxx
 走过场	ehxy
 趨勢	ehyg
 跑步	ehyg
@@ -9282,6 +9287,7 @@ sort: original
 攮	ffnk
 紥紥實實	ffnn
 扎扎实实	ffnn
+控股	fnnw
 捁	ffo
 牿	ffo
 拍手叫好	ffoa
@@ -9692,6 +9698,7 @@ sort: original
 事務	fhra
 事态	fhrd
 攤	fhri
+招贴	fhrl
 掭	fhrl
 擹	fhrv
 輻射	fhrx
@@ -14450,6 +14457,7 @@ sort: original
 总书记	gofi
 总归	goge
 总分	gogh
+总监	gogk
 总数	gogm
 总动员	gogo
 总公司	gogz
@@ -14804,6 +14812,7 @@ sort: original
 须	gtr
 媭	gtra
 嬃	gtra
+师太	gtrh
 单身	gtrj
 頾	gtrl
 精神財富	gtrn
@@ -16474,6 +16483,7 @@ sort: original
 万能	hhun
 荎	hhuy
 芡	hhv
+一但	hhvb
 敬仰	hhvc
 无一例外	hhvd
 一律	hhvf
@@ -16486,7 +16496,6 @@ sort: original
 一條龍	hhvi
 一倍	hhvi
 一个	hhvi
-ƙ	ƙ
 万全	hhvi
 驚人	hhvj
 一任	hhvj
@@ -17457,6 +17466,7 @@ sort: original
 互惠	hocu
 够	hodd
 副外長	hodf
+融资	hodh
 互派	hodj
 副外长	hodk
 觀測	hodr
@@ -27809,6 +27819,7 @@ sort: original
 第一阶段	khpf
 奖勤罚懒	khql
 筻	khr
+并购	khrh
 气急败坏	khry
 鵧	khs
 并要	khsa
@@ -28069,6 +28080,7 @@ sort: original
 长篇	kjkd
 气氛	kjkg
 首长	kjkj
+道长	kjkj
 气馁	kjkj
 饭馆	kjkn
 奬牌	kjkq
@@ -36251,10 +36263,12 @@ sort: original
 噋	oioa
 噈	oiod
 口吻	oioh
+嘿嘿	oioi
 嚷	oiok
 咳嗽	oiom
 口味	oiom
 咬文嚼字	oion
+→_→	oioo
 唾骂	oioo
 嗃	oioo
 嚎	oioq
@@ -36444,6 +36458,7 @@ sort: original
 噀	ollg
 哔	ollx
 呫	olo
+卟卟	olol
 吳	olr
 啭	ols
 噸	oltr
@@ -36621,6 +36636,7 @@ sort: original
 嘼	ooqo
 單獨	ooqq
 哭	oord
+〒_〒	oord
 器	ooro
 駡	oos
 呺	oos
@@ -36708,7 +36724,8 @@ sort: original
 呣	oql
 啄木鸟	oqms
 喟	oqn
-嗯嗯嗯	oqoo
+눈_눈	oqoo
+嗯嗯嗯	oqoq
 咽喉	oqov
 盠	oqq
 嚺	oqqz
@@ -36827,6 +36844,7 @@ sort: original
 嗶	oti
 吁请	otiy
 呵	oto
+呵呵	otot
 叮咛	oton
 叮囑	otop
 叮嘱	otop
@@ -37110,6 +37128,7 @@ sort: original
 嘭	oyog
 唉声叹气	oyok
 嘻	oyoo
+咔咔	oyoy
 嘖	oyr
 嘳	oyr
 啧	oyr
@@ -38453,6 +38472,7 @@ sort: original
 展翅	psxa
 民間	psxb
 民办	psxg
+展架	psxo
 展開	psxs
 礟	psxx
 陻	psy
@@ -38492,6 +38512,8 @@ sort: original
 硕大	ptrh
 硏	ptt
 避而不谈	ptti
+码不停提马上无虫	ptvc
+码不停提马上无虫	ptvf
 陷于绝境	ptwy
 屚	ptx
 礵	ptxb
@@ -39441,6 +39463,7 @@ sort: original
 因果关系	qmkj
 罧	qmm
 困守	qmnx
+图样图森破	qmqp
 思想感情	qmsl
 困惑	qmso
 困倦	qmvg
@@ -41397,6 +41420,7 @@ sort: original
 炼焦	rlvi
 大快人心	rlvu
 身怀绝技	rlwf
+贴纸	rlwj
 夿	rlz
 貤	rlz
 灺	rlz
@@ -46533,6 +46557,7 @@ sort: original
 鼭	ugyd
 税款	ugyg
 稍差	ugyi
+翻墙无力症患者	ugyj
 鼱	ugyn
 翻墙	ugyy
 鋫	ugz
@@ -46971,6 +46996,7 @@ sort: original
 程控	uofn
 刣	uog
 积	uog
+和尚	uogn
 台州	uogg
 积分	uogh
 稏	uoh
@@ -47145,6 +47171,7 @@ sort: original
 鱊	urno
 参赛	urns
 参展	urps
+参股	urnw
 畚	urq
 貵	urr
 醔	urs
@@ -48147,7 +48174,7 @@ sort: original
 年满	vfdh
 年岁	vfed
 伸出	vfeu
-伸手派	vffd
+伸手党	vffg
 年輕	vffh
 年事	vffh
 年中	vffi
@@ -48515,7 +48542,6 @@ sort: original
 俨然	vhdr
 仍然	vhdr
 僅次于	vhdt
-贪天之功为己有	vhdx
 行为	vhdx
 無法	vhdy
 合法	vhdy
@@ -55488,6 +55514,8 @@ sort: original
 加班	xoig
 胡说	xoig
 加工	xoih
+右方	xoih
+→_→	xoih
 故里	xoii
 加工廠	xoij
 加工厂	xoij
@@ -57914,6 +57942,7 @@ sort: original
 遗愿	yrjj
 遺失	yrjr
 遗失	yrjr
+喜大普奔	yrkr
 埯	yrl
 责怪	yrla
 遺憾	yrls
