for up mac 10.11 back all local cfg

--- a/Rime-Squirrel/bxm4zq2mac.dict.yaml
+++ b/Rime-Squirrel/bxm4zq2mac.dict.yaml
@@ -3898,6 +3898,7 @@ sort: original
 洛阳	dapb
 浩如烟海	dard
 泪如雨下	datt
+泽徽	dave
 滩	davi
 錃	daz
 波	daz
@@ -6431,6 +6432,7 @@ sort: original
 治山	duei
 潘达	durz
 洠	duf
+潘建波	dufd
 淫秽物品	dufo
 浰	dug
 浚	duga
@@ -10584,6 +10586,7 @@ sort: original
 據估計	fjvi
 托人	fjvj
 插入	fjvj
+振华	fjvl
 手術	fjvm
 控制人口	fjvo
 拆借	fjvs
@@ -15385,6 +15388,7 @@ sort: original
 蘵	hbis
 节目主持人	hbiv
 草率	hbiw
+莫广	hbjd
 幕后	hbjh
 一日千里	hbji
 草原	hbjj
@@ -25176,6 +25180,7 @@ sort: original
 遮擋	jhfg
 后事	jhfh
 后撤	jhfi
+后援	jhfj
 遮掩	jhfr
 后患	jhfu
 虝	jhg
@@ -25720,6 +25725,7 @@ sort: original
 老外	jldl
 老资格	jldm
 库房	jldp
+老潘	jldu
 爬山	jlei
 老农	jlek
 庇护	jlfd
@@ -26096,6 +26102,7 @@ sort: original
 癃	jpay
 自即日起	jpbe
 廄	jpda
+邝泽徽	jpdv
 亂砍濫伐	jpdv
 乱砍滥伐	jpdv
 厩	jpdw
@@ -36249,6 +36256,7 @@ sort: original
 呈現	oiib
 口语	oiii
 口音	oiik
+啍啍	ioio
 口诀	oiir
 口试	oiis
 唾弃	oiiu
@@ -36745,7 +36753,7 @@ sort: original
 呣	oql
 啄木鸟	oqms
 喟	oqn
-嗯啍	oqoi
+嗯哼	oqoi
 嗯嗯嗯	oqoo
 눈_눈	oqoq
 嗯嗯	oqoq
@@ -37605,6 +37613,7 @@ sort: original
 石嘴山	phoe
 礶	phoi
 隔	phoy
+隔壁	phpo
 硬碰硬	phpp
 陷阱	phps
 卫队	phpv
@@ -39049,6 +39058,7 @@ sort: original
 犿	qdt
 置之不理	qdti
 因为种种原因	qduq
+罗佐之	qdvd
 独资企业	qdvx
 圓滿結束	qdwm
 圆满结束	qdwm
@@ -40704,6 +40714,7 @@ sort: original
 灿	rei
 燖	reid
 中州韻	reim
+熠瑄	rein
 煤炭工业	reix
 泰山压顶	rejt
 奔走相告	remf
@@ -45891,6 +45902,7 @@ sort: original
 禧	tyoo
 襭	tyor
 社员	tyor
+社群	typo
 社團	tyqc
 襩	tyqr
 社团	tyqx
@@ -48144,6 +48156,7 @@ sort: original
 微生物	vejf
 促生产	veji
 微店	vejl
+徽	veha
 侬	vek
 侵蝕	vekc
 侵蚀	vekc
@@ -48187,7 +48200,9 @@ sort: original
 儶	vevo
 促使	vevr
 促進會	vevv
+徽仔	vevz
 侺	vevz
+徽	vewa
 微弱	vewd
 侵袭	vewi
 微风	vewx
@@ -51696,6 +51711,7 @@ sort: original
 怤	vxdu
 付清	vxdy
 做法	vxdy
+佐之	vxdz
 佈	vxe
 付印	vxep
 付出	vxeu
@@ -53334,7 +53350,6 @@ sort: original
 綜	wngg
 综	wngg
 縮小	wngi
-缩小	wngi
 綗	wngo
 綄	wngw
 纻	wnh
@@ -53365,6 +53380,8 @@ sort: original
 絅	wno
 緺	wno
 缤	wnog
+缩略	wnqa
+缩略图	wnqq
 總體規劃	wnry
 綱要	wnsa
 纲要	wnsa
