appended some words

--- a/Rime-Squirrel/bxm4zq2mac.dict.yaml
+++ b/Rime-Squirrel/bxm4zq2mac.dict.yaml
@@ -2390,6 +2390,7 @@ sort: original
 眼光	bpgh
 邯郸	bpgt
 基层单位	bpgv
+眼动仪	bpgv
 眼色	bphl
 矚	bpic
 曯	bpic
@@ -8371,7 +8372,8 @@ sort: original
 峣	eshw
 跷	eshw
 跩	esi
-越野	esiz
+跩	esi
+超市	ehie
 峩	esj
 嵨	esj
 嶋	esj
@@ -8855,6 +8857,7 @@ sort: original
 牧	faj
 事务管理	faki
 摊牌	fakq
+妻	fal
 揝	falb
 摊点	falo
 輅	fao
@@ -8877,6 +8880,7 @@ sort: original
 叏	faz
 叓	faz
 披	faz
+妻子	yazz
 摊子	fazz
 輙	fba
 掫	fba
@@ -12551,6 +12555,7 @@ sort: original
 排队	fxpv
 排除	fxpv
 拔除	fxpv
+技因	fxqr
 拻	fxr
 贽	fxr
 挑大梁	fxrd
@@ -31612,6 +31617,7 @@ sort: original
 橿	mhqh
 本国	mhqi
 橡	mhqq
+模因	mhqr
 本國	mhqs
 构思	mhqu
 楧	mhr
@@ -49651,6 +49657,7 @@ sort: original
 入出境	vjey
 傭	vjf
 人事处	vjfa
+人妻	vjfa
 年度报告	vjff
 人生哲学	vjfg
 傻事	vjfh
@@ -53071,6 +53078,7 @@ sort: original
 總工會	wjiv
 乡亲们	wjiv
 绪论	wjiv
+几率	wjiw
 總計	wjix
 纏	wjiy
 纒	wjiy
