👌 IMPROVE: fix 昩因®昧因

--- a/Rime-Squirrel/bxm4zq2mac.dict.yaml
+++ b/Rime-Squirrel/bxm4zq2mac.dict.yaml
@@ -2237,8 +2237,8 @@ sort: original
 基本國策	bmqk
 基本国策	bmqk
 基本思想	bmqm
+昩因®	bmqr
 昧因	bmqr
-昧因®	bmqr
 基本矛盾	bmrj
 基本規律	bmrv
 基本规律	bmrv
@@ -13005,6 +13005,7 @@ sort: original
 分期付款	gbvy
 覍	gbw
 精明强干	gbwt
+三昧真火	gbxr
 兴旺发达	gbxr
 分清是非	gdbx
 临渴掘井	gdfs
@@ -13244,6 +13245,7 @@ sort: original
 兴旺	ghbi
 举目	ghbi
 光景	ghbi
+三昧	ghbm
 分明	ghbn
 光明	ghbn
 三明	ghbn
