--- a/Rime-Squirrel/Library_Rime/alternative.yaml
+++ b/Rime-Squirrel/Library_Rime/alternative.yaml
@@ -9,86 +9,85 @@
 # (Linux)   ~/.config/ibus/rime/alternative.yaml
 # (Mac OS)  ~/Library/Rime/alternative.yaml
 # (Windows) "%APPDATA%\Rime\alternative.yaml"
-# 
+#
 # edit <SCHEMA_ID>.custom.yaml:
 # >> patch:
 # >>   'punctuator/import_preset': alternative
 # >>   'key_binder/import_preset': alternative
 #
 # for detailed explanation, refer to:
-# http://code.google.com/p/rimeime/wiki/CustomizationGuide#%E4%BD%BF%E7%94%A8%E5%85%A8%E5%A5%97%E8%A5%BF%E6%96%87%E6%A8%99%E9%BB%9E 
+# http://code.google.com/p/rimeime/wiki/CustomizationGuide#%E4%BD%BF%E7%94%A8%E5%85%A8%E5%A5%97%E8%A5%BF%E6%96%87%E6%A8%99%E9%BB%9E
 
-config_version: "0.3"
+config_version: "0.16"
 
 punctuator:
   full_shape:
-    " " : { commit: "　" }
-    "," : { commit: ， }
-    "." : { commit: 。 }
-    "<" : [ 《, 〈, «, ‹ ]
-    ">" : [ 》, 〉, », › ]
-    "/" : [ 、, ／, "/", ÷ ]
-    "?" : { commit: ？ }
-    ";" : { commit: ； }
-    ":" : ：
-    "'" : { pair: [ "‘", "’" ] }
-    "\"" : { pair: [ "“", "”" ] }
-    "\\" : [ 、, ＼, "\\" ]
-    "|" : [ ・, ｜, "|", "§", "¦" ]
-    "`" : [ ｀, "`" ]
-    "~" : [ 〜, "~", ～, 〰 ]
-    "!" : { commit: ！ }
-    "@" : [ ＠, "@", ☯ ]
-    "#" : [ ＃, "#", ⌘ ]
-    "%" : [ ％, "%", "°", "℃" ]
-    "$" : [ ￥, "$", "€", "£", "¥", "¢", "¤" ]
-    "^" : { commit: …… }
-    "&" : [ ＆, "&" ]
-    "*" : [ ＊, "*", ・, ×, ※, ❂, · ]
-    "(" : （
-    ")" : ）
-    "-" : [ －, "-" ]
-    "_" : ——
-    "+" : [ ＋, "+" ]
-    "=" : [ ＝, "=" ]
-    "[" : [ 「, 【, 〔, ［ ]
-    "]" : [ 」, 】, 〕, ］ ]
-    "{" : [ 『, 〖, ｛ ]
-    "}" : [ 』, 〗, ｝ ]
+    " ": {commit: " "}
+    "!": {commit: "！"}
+    ",": {commit: "，"}
+    ".": {commit: "。"}
+    "<": ["《", "〈", "«", "‹"]
+    ">": ["》", "〉", "»", "›"]
+    "/": ["、", "／", "/", "÷"]
+    "?": {commit: "？"}
+    ":": {commit: "："}
+    ";": {commit: "；"}
+    "'": {pair: ["‘", "’"]}
+    "\"": {pair: ["“", "”"]}
+    "\\": ["、", "＼"]
+    "|": ["·", "｜", "§", "¦"]
+    "`": "｀"
+    "~": "～"
+    "@": ["＠", "☯"]
+    "#": ["＃", "⌘"]
+    "%": ["％", "°", "℃"]
+    "$": ["￥", "$", "€", "£", "¥", "¢", "¤"]
+    "&": "＆"
+    "^": {commit: "……"}
+    "*": ["＊", "·", "・", "×", "※", "❂"]
+    "(": "（"
+    ")": "）"
+    "+": "＋"
+    "-": "－"
+    "=": "＝"
+    "_": "——"
+    "[": ["「", "【", "〔", "［"]
+    "]": ["」", "】", "〕", "］"]
+    "{": ["『", "〖", "｛"]
+    "}": ["』", "〗", "｝"]
   half_shape:
+    "!": {commit: "!"}
     "," : { commit: "," }
     "." : { commit: "." }
     "<" : "<"
     ">" : ">"
-    "/" : "/"
+    "/": ["/", "÷"]
     "?" : { commit: "?" }
     ";" : { commit: ";" }
     ":" : { commit: ":" }
     "'" : "'"
     "\"" : "\""
-    "\\" : "\\"
-    "|" : "|"
+    "\\": ["、", "\\", "＼"]
+    "|": ["|", "·", "｜", "§", "¦"]
     "`" : "`"
-    "~" : "~"
-    "!" : { commit: "!" }
+    "~": ["~", "～"]
     "@" : "@"
     "#" : "#"
-    "%" : "%"
-    "$" : "$"
-    "^" : "^"
+    "%": ["%", "％", "°", "℃"]
+    "$": ["￥", "$", "€", "£", "¥", "¢", "¤"]
     "&" : "&"
-    "*" : "*"
+    "^" : "^"
+    "*": ["*", "＊", "·", "・", "×", "※", "❂"]
     "(" : "("
     ")" : ")"
-    "-" : "-"
-    "_" : "_"
     "+" : "+"
+    "-" : "-"
     "=" : "="
+    "_" : "_"
     "[" : "["
     "]" : "]"
     "{" : "{"
     "}" : "}"
-
 key_binder:
   bindings:
     # commonly used paging keys
