--- a/Rime-Squirrel/Library_Rime/user.yaml
+++ b/Rime-Squirrel/Library_Rime/user.yaml
@@ -1,11 +1,14 @@
 var:
+  last_build_time: 1675309578
   option:
-    ascii_punct: true
-    full_shape: false
+    ascii_punct: false
+    full_shape: true
     simplification: true
   previously_selected_schema: bxm4zq2mac
   schema_access_time:
-    bxm4zq2mac: 1548843880
-    luna_pinyin: 1485326618
-    luna_pinyin_simp: 1485326711
-    pinyin_simp: 1548843873
+    bxm4zq2mac: 1675309220
+    combo_pinyin: 1603960976
+    double_pinyin_flypy: 1603960839
+    luna_pinyin: 1603960493
+    luna_pinyin_simp: 1672040012
+    pinyin_simp: 1675309204
