--- a/Rime-Squirrel/Library_Rime/default.custom.yaml
+++ b/Rime-Squirrel/Library_Rime/default.custom.yaml
@@ -1,21 +1,22 @@
 # Rime default settings Custom
 # encoding: utf-8
-#
+# SEE:
+#   https://gist.github.com/lotem/2981316
 
 patch:
-  "menu/page_size": 7   # 候选项数
+  menu/page_size: 7   # 候选项数
   schema_list:  # 對於列表類型，現在無有辦法指定如何添加、消除或單一修改某項，於是要在定製檔中將整個列表替換！
     - schema: bxm4zq2mac  # 這樣就啓用了未曾有過的高級輸入方案！其實這麼好的方案應該排在最前面哈。
     - schema: pinyin_simp
     - schema: luna_pinyin_simp
-    - schema: terra_pinyin
+    #- schema: terra_pinyin
     #- schema: combo_pinyin
-  "switcher/hotkeys":  # 這個列表裏每項定義一個快捷鍵，使哪個都中
-    - "Alt+grave"
+  switcher/hotkeys:  # 這個列表裏每項定義一個快捷鍵，使哪個都中
+    - Alt+grave
     #- "Control+grave"  # 你看寫法並不是 Ctrl+` 而是與 IBus 一致的表示法
     #- F4
   ascii_composer:
-    good_old_caps_lock: true
+    good_old_caps_lock: false
     switch_key:
       Shift_L: inline_ascii
       Shift_R: commit_text
@@ -23,3 +24,9 @@ patch:
       Control_R: commit_code
       #Caps_Lock: clear
       #Eisu_toggle: clear
+  key_binder:
+    bindings:
+      - { when: always, accept: Shift+space,    toggle: ascii_mode}
+      - { when: always, accept: Control+period, toggle: ascii_punct}
+
+
