📖 DOC: ++new words

--- a/Rime-Squirrel/bxm4zq2mac.dict.yaml
+++ b/Rime-Squirrel/bxm4zq2mac.dict.yaml
@@ -1511,6 +1511,7 @@ sort: original
 剘	bgg
 其二	bggh
 基数	bggm
+基类	bggm
 盼头	bggr
 晃动	bggu
 昐	bgh
@@ -2894,6 +2895,7 @@ sort: original
 显要	bxsa
 鼎盛	bxsj
 助威	bxsj
+显式	bxsi
 睵	bxso
 是非曲直	bxsx
 量力而为	bxtd
@@ -20301,11 +20303,11 @@ sort: original
 旅游業	ihdx
 旅游业	ihdx
 正义	ihdx
+方法	ihdy
+弄清	ihdy
+正法	ihdy
 認清	ihdy
 譅	ihdy
-弄清	ihdy
-方法	ihdy
-正法	ihdy
 诌	ihe
 正路	ihea
 謅	ihee
@@ -24634,6 +24636,7 @@ sort: original
 质量检验	jbms
 歸來	jbmv
 嬮	jbna
+自定义	jbnd
 黶	jbnd
 厭	jbnd
 擪	jbnf
@@ -26364,10 +26367,10 @@ sort: original
 賡	jrr
 痰	jrr
 赓	jrr
+失败	jrra
+失敗	jrra
 廮	jrra
 癭	jrra
-失敗	jrra
-失败	jrra
 瘿	jrra
 失火	jrrd
 失败者	jrrj
