🎨 UPDATE: ++new word

--- a/Rime-Squirrel/bxm4zq2mac.dict.yaml
+++ b/Rime-Squirrel/bxm4zq2mac.dict.yaml
@@ -37665,6 +37665,7 @@ sort: original
 隐形	phsg
 隔开	phsh
 陶醉	phsi
+隐式	phsi
 卫戍	phsj
 碔	phsy
 陚	phsy
@@ -46274,6 +46275,7 @@ sort: original
 鳊	udph
 稂	udpk
 移民	udps
+移除	udpv
 移居	udpx
 心田	udqi
 心思	udqu
