🎨 UPDATE: ++new words

--- a/Rime-Squirrel/bxm4zq2mac.dict.yaml
+++ b/Rime-Squirrel/bxm4zq2mac.dict.yaml
@@ -13467,6 +13467,7 @@ sort: original
 鳻	ghs
 分开	ghsh
 二进制	ghsf
+二进制	ghsj
 兴盛	ghsj
 分成	ghsj
 分配	ghsl
@@ -13781,6 +13782,7 @@ sort: original
 少则	gjrg
 总的形势	gjsf
 八成	gjsj
+八进制	gjsj
 八百	gjtb
 少而精	gjtg
 少于	gjth
@@ -31515,8 +31517,9 @@ sort: original
 櫹	mhfx
 模特	mhfy
 相互指责	mhfy
-櫣	mhfz
 构建	mhfz
+本书	mhfz
+櫣	mhfz
 本分	mhgh
 桱	mhgi
 本省	mhgj
@@ -35912,6 +35915,7 @@ sort: original
 字串	nzfi
 字段	nzfw
 字幕	nzhb
+字节	nzhp
 胫	nzi
 字迹	nzix
 字符	nzkv
@@ -43845,6 +43849,7 @@ sort: original
 进水	szix
 黄金市场	sziy
 进度	szjh
+进制	szjf
 马后炮	szjr
 马虎	szjw
 进度表	szjy
@@ -54965,6 +54970,7 @@ sort: original
 歕	xhrv
 凿开	xhsh
 對于	xhth
+十进制	xhsj
 對面	xhtq
 非死不可	xhtt
 十恶不赦	xhty
@@ -55123,6 +55129,7 @@ sort: original
 北京大学	xirg
 有计划商品经济	xisd
 在京开幕	xish
+十六进制	xisj
 在新形势下	xist
 在新形勢下	xist
 有计划按比例	xisv
